# Automake

./: Makefile.in  README  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.2
src/: Makefile.am  Makefile.in  foobar.cpp
