# The prefix "bin_" tells Automake where to copy the resulting program when the user runs make install. Known directory prefixes include:
# bin_  for programs, e.g., /usr/local/bin
# lib_  where libraries are placed, e.g., /usr/local/lib
# include_  where header files are placed, e.g., /usr/local/include
# pkginclude_  e.g., /usr/local/include/foobar
# noinst_  files that will not be copied anywhere by make install

bin_PROGRAMS = foobar
foobar_SOURCES = foobar.cpp
